--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div>main</div>
     <div>main 2</div>
+    <div>feature</div>
     <script src="./index.js"></script>
 </body>
 </html>
